<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inbox_id"
            android:icon="@drawable/ic_inbox_black_24dp"
            android:title="@string/inbox" />

        <item
            android:id="@+id/sent_id"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/sent_mails" />
        <item
            android:id="@+id/draft_id"
            android:icon="@drawable/ic_drafts_black_24dp"
            android:title="Draft" />

    </group>

    <item android:title="@string/sub_header">
        <menu>
            <item
                android:id="@+id/setting_id"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/setting" />
            <item
                android:id="@+id/spam_id"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/spam" />

        </menu>

    </item>


</menu>